@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'jacoco-android'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.ksu.serene"
         minSdkVersion 21
@@ -20,8 +21,18 @@ android {
         debug {
             testCoverageEnabled true
         }
-
     }
+    testOptions {
+        animationsDisabled true
+        unitTests.includeAndroidResources = true
+        unitTests {
+            all {
+                //exclude 'org.bouncycastle/**'
+                jvmArgs '-XX:MaxPermSize=256m'
+            }
+        }
+    }
+
 }
 repositories {
     mavenCentral()
@@ -29,10 +40,12 @@ repositories {
         url 'https://maven.google.com'
     }
     maven { url "https://jitpack.io" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -55,9 +68,13 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:2.2.1'
+    testImplementation 'androidx.test:runner:1.2.0'
+    testImplementation 'androidx.test:rules:1.2.0'
+    testImplementation 'org.powermock:powermock:1.6.5'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
         exclude group: 'com.android.support', module: 'appcompat'
@@ -71,6 +88,10 @@ dependencies {
     androidTestImplementation('androidx.test.espresso:espresso-idling-resource:2.2.2')
     //for graneed permission
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    //for test DB
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
+    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
 
 
     // Cloud FireStore
